[tool.poetry]
name = "tiktoken-compress"
version = "0.1.0"
description = ""
authors = ["Kyle Anthony Williams <kyle.anthony.williams2@gmail.com>"]
readme = "README.md"
packages = [{include = "tiktoken_compress"}]

[tool.poetry.dependencies]
python = "^3.10"
tiktoken = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
